refactor: agora os meta dados são compartilhados entre as tuplas